Add jSpecify node.settings package.